@@ -1,3 +1,4 @@
+* Add coroutine concurrency option
 * Add increasing delay on database operational error retry
 * Allows to lock records for update
 * Remove _nocache on Transaction
